# radif

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
adif_macros/: Cargo.toml
radif/: Cargo.toml
radif/examples/: count_qso.rs  count_qso_tokio.rs
radif/src/: adif.rs  data.rs  error.rs  field.rs  file.rs  header.rs  lib.rs  qso.rs  result.rs
radif/src/enumerations/: ant_path.rs  arrl_section.rs  award.rs  band.rs  contest_id.rs  continent.rs  credit.rs  dxcc_enity_code.rs  mod.rs  mode.rs  morse_key_type.rs  propagation_mode.rs  qsl_medium.rs  qsl_rcvd.rs  qsl_sent.rs  qsl_via.rs  qso_complete.rs  qso_upload_status.rs  region.rs  submode.rs
radif/src/fields/: data.rs  header.rs  iota_ref_no.rs  location.rs  mod.rs  qso.rs  sponsored_award.rs
radif/src/utilities/: maidenhead_locator.rs  mod.rs
radif_macros/: Cargo.toml
radif_macros/src/: lib.rs
