[package]
name = "adif_macros"
version = "0.1.0"
edition = "2024"
authors = ["Luca Cireddu <sardylan@gmail.com>"]
description = "Macros for ADIF format parsing and serialization."
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/sardylan/radif.git"
keywords = ["ADIF", "radio", "hamradio", "ham", "logbook"]

[dependencies]
syn = "2.0.104"
quote = "1.0.40"

[lib]
proc-macro = true
