[package]
name = "radif"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cireddu <sardylan@gmail.com>"]
description = "Rust ADIF format library for parsing and serialization."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/sardylan/radif.git"
keywords = ["ADIF", "radio", "hamradio", "ham", "logbook"]
categories = ["data-structures", "parsing"]

[dependencies]
radif_macros = { version = "=1.0.0", path = "../radif_macros" }
futures = "0.3.31"
chrono = "0.4.41"
